[package]
name = "internet_test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tic"
path = "src/main.rs"

[dependencies]
anstyle = "1.0.10"
anyhow = "1.0.98"
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive", "color"] }
constcat = "0.6.0"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = "0.12.15"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
