[package]
name = "internet_test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "it"
path = "src/main.rs"

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive", "color"] }
constcat = "0.6.1"
env_logger = "0.11.10"
log = "0.4.29"
reqwest = "0.13.3"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }
